<resources>
    <string name="app_name">Ucollect</string>
    <string name="collectapp">U Collect</string>
    <string name="log_in">Logear</string>
    <string name="sign_up">Registrar</string>
    <string name="user">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ver_password">ver_password</string>
    <string name="iniciar_sesi_n">Acceder</string>
    <string name="email">Email</string>
    <string name="olvidado">He olvidado mi contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrase_a_olvidada">Contraseña olvidada?</string>
    <string name="mensaje_forgot_1">Mándenos su correo electrónico</string>
    <string name="mensaje_forgot_2">Para resetear su contraseña</string>
    <string name="imagen_candado">imagen_candado</string>
    <string name="imagen_volver_atras">imagen_volver_atras</string>
    <string name="enviar">Enviar</string>
    <string name="perfil">Perfil</string>
    <string name="settings">Configuracion</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrar">Registrar</string>
    <string name="colecciones">colecciones</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal_bottom_nav">PrincipalBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="error_al_iniciar_sesi_n">Error al iniciar sesión</string>
    <string name="se_ha_producido_un_error_al_iniciar_sesi_n">Se ha producido un error al iniciar sesión</string>
    <string name="aceptar">aceptar</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="introduzca_la_contrase_a_actual">Introduzca la contraseña actual</string>
    <string name="introduzca_la_nueva_contrase_a">Introduzca la nueva contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="nombre_usuario">nombre usuario</string>
    <string name="error_al_actualizar">Error al actualizar</string>
    <string name="error_al_actualizar_el_perfil_intentelo_de_nuevo">Error al actualizar el perfil, intentelo de nuevo</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="verificar_cuenta">Verificar cuenta</string>
    <string name="introduzca_la_contrase_a_para_verificar_su_identidad">Introduzca la contraseña para verificar su identidad</string>
    <string name="cambio_de_correo">Cambio de correo</string>
    <string name="introduzca_un_nuevo_correo_electronico">Introduzca un nuevo correo electronico</string>
    <string name="agregar_objeto">Agregar objeto</string>
    <string name="nombre_del_objeto">Nombre del objeto</string>
    <string name="selecciona_una_imagen">Selecciona una imagen</string>
    <string name="tipo_de_coleccionable">Tipo de coleccionable</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="precio_del_objeto">Precio del objeto</string>
    <string name="intercambio">Intercambio</string>
    <string name="informaci_n">Información</string>
    <string name="guardar">Guardar</string>
    <string name="mis_objetos">Mis Objetos</string>
    <string-array name="spinne_intercambio">
        <item>Aceptar intercambio</item>
        <item>Denegar intercambio</item>
    </string-array>
</resources>