<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Changepassword">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cambiar_contrase_a"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </Toolbar>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/introduzca_la_contrase_a_actual"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/cambiar_pass_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <EditText
            android:id="@+id/EditTextOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:ems="12"
            android:hint="@string/contrase_a"
            android:textColorHint="#393939"
            android:textColor="#393939"
            android:inputType="textPassword"
            android:padding="15dp" />

    <ImageView
        android:id="@+id/ImagenVerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_visibility_24"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:tint="#494949"
        android:tag="ver_pass"
        android:contentDescription="@string/ver_password"
        android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/introduzca_la_nueva_contrase_a"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/cambiar_pass_fondo"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/EditTextnewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:ems="12"
            android:hint="@string/nueva_contrase_a"
            android:textColor="#393939"
            android:textColorHint="#393939"
            android:inputType="textPassword"
            android:padding="15dp" />

        <ImageView
            android:id="@+id/ImagenverNuevaPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:tag="ver_pass"
            android:contentDescription="@string/ver_password"
            android:src="@drawable/ic_baseline_visibility_24"
            app:tint="#494949"
            android:visibility="invisible"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#379AC8"
        android:padding="30dp"
        android:text="@string/aceptar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.10" />


</androidx.constraintlayout.widget.ConstraintLayout>