<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/item_border_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagenObjeto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:src="@drawable/model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloObjeto"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/nombre_del_objeto"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tipoObjeto"
        app:layout_constraintStart_toEndOf="@+id/imagenObjeto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipoObjeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tipo"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/precioObjeto"
        app:layout_constraintStart_toEndOf="@+id/imagenObjeto"
        app:layout_constraintTop_toBottomOf="@+id/tituloObjeto" />

    <TextView
        android:id="@+id/usuarioEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/nombre_usuario"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagenObjeto"
        app:layout_constraintTop_toBottomOf="@+id/precioObjeto" />

    <TextView
        android:id="@+id/precioObjeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/precio"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/usuarioEmail"
        app:layout_constraintStart_toEndOf="@+id/imagenObjeto"
        app:layout_constraintTop_toBottomOf="@+id/tipoObjeto" />

</androidx.constraintlayout.widget.ConstraintLayout>