<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeEmailVerified">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cambio_de_correo"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/introduzca_un_nuevo_correo_electronico"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_edittext_editar_perfil"
            android:padding="3dp"
            android:text="@string/email"
            android:textColor="#393939" />

        <EditText
            android:id="@+id/editTextEmailCambioCorreo"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/borde_edittext_editar_perfil"
            android:inputType="textEmailAddress"
            android:labelFor="@id/editTextNombreEditarPerfil"
            android:minHeight="48dp"
            android:hint="@string/email"
            android:padding="10dp"
            android:text="@string/email"
            android:textColorHint="#6A6A6A"
            android:textColor="#6A6A6A" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#379AC8"
        android:padding="30dp"
        android:text="@string/aceptar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainer"
        app:layout_constraintVertical_bias="0.25
" />
</androidx.constraintlayout.widget.ConstraintLayout>